syntax = "proto3";

package NAlice.NAnalytics.NDummyResponse;

option go_package = "a.yandex-team.ru/alice/protos/analytics/dummy_response";
option java_package = "ru.yandex.alice.protos.analytics.dummy_response";

import "mapreduce/yt/interface/protos/extension.proto";

message TResponse {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    enum EReason {
        Undefined = 0;
        SurfaceInability = 1; // client doesn't support some needed features
        BackendError = 2; // any server error which led to inability to respond properly
        NoContent = 3; // any kind of search wasn't able to find requested content
    }

    EReason Reason = 1 [json_name = "reason", (NYT.column_name) = "reason"];
}
